# Janus-Service

./: README.md
edge-ai/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
edge-ai/app/: __init__.py  config.py  dependencies.py  logging_config.py  main.py  server.py
edge-ai/app/api/: __init__.py  websocket_routes.py
edge-ai/app/application/orchestrators/: conversation_orchestrator.py
edge-ai/app/application/prompts/: __init__.py  developer_prompt.py  output_contract.py  system_prompt.py
edge-ai/app/application/services/: fallback_response_service.py  greeting_service.py  prompt_builder.py  response_validator.py  touch_interpreter.py  wake_detection_service.py
edge-ai/app/domain/enums/: action_type.py  emotion.py  face_expression.py  voice_style.py
edge-ai/app/domain/models/: ai_response_plan.py  device_event.py  session_context.py  touch_context.py
edge-ai/app/domain/ports/: llm_port.py  provider_errors.py  session_repository_port.py  stt_port.py  telemetry_port.py  tts_port.py  wake_detection_port.py
edge-ai/app/infrastructure/: __init__.py
edge-ai/app/infrastructure/adapters/llm/: gemini_llm_adapter.py  mock_llm_adapter.py
edge-ai/app/infrastructure/audio/: wav_codec.py
edge-ai/app/schemas/: llm_response_schema.py  websocket_messages.py
edge-ai/docs/adr/: 0001-wake-detection-strategy.md
edge-ai/schemas/: device-protocol.schema.json
edge-ai/tests/: test_conversation_orchestrator.py  test_fallback_response_service.py  test_protocol_compatibility.py  test_response_validator.py  test_touch_interpreter.py
(+13 files in other folders)
